    except by SAVE-LISP-AND-DIE. Immobility has helpful implications for
    code generation as well as interaction with foreign routines.
    This feature can only be enabled if #+immobile-space is enabled.
  * enhancement: undefined function errors can be restarted on x86-64, to
    either retry calling the function again or call a user supplied function.
  * defaults change: sb-ext:*disassemble-annotate* default to NIL, due to its
    poor reliability.
  * new feature: SB-LINKABLE-RUNTIME, allowing linking with extra object
    files to help with delivery of executables.  (Thanks to François-René
    Rideau)
  * bug fix: data race in GENTEMP fixed - it can no longer return the
    same interned symbol to multiple threads if called concurrently
  * bug fix: interrupting LOADing of FASLs does not leave functions without
    source locations. (lp#540276)
  * bug fix: DYNAMIC-EXTENT-declared results of NOTINLINE local functions were
    treated as if they were actually stack allocated (lp#1659964)
  * bug fix: correctly handle the case of a non-local exit within a function
    terminating the extent of dynamic-extent, dynamic-bound variables in the
    presence of multiple-values (lp#1655011)
  * bug fix: handling of SB-SYS:WITH-PINNED-OBJECTS in the interpreters (both
    sb-eval and sb-fasteval) now actually pins objects on gencgc.
  * bug fix: AVX registers are preserved during exceptions on x86-64 macOS.
  * bug fix: (directory "SOMETHING/*/**/MORE") is no longer equivalent to
    (directory "SOMETHING/**/MORE")

changes in sbcl-1.3.14 relative to sbcl-1.3.13:
  * minor incompatible change: the SB-PCL walker no longer recognizes
    macros expanding into a DECLARE expression. This is not a language change,
    since ANSI forbids such usage (X3J13 issue DECLARE-MACROS:FLUSH).
  * enhancement: for several macros such as MULTIPLE-VALUE-{BIND,SETQ}, COND,
    DO{,*,LIST}, {RESTART,HANDLER}-{BIND,CASE}, *CASE, conditions signaled